# CayPPer

./: CMakeLists.txt  INSTALL.md  Main.qml  README.md  caypper.desktop  install.sh  main.cpp  resources.qrc  uninstall.sh
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/backends/gnome/: CMakeLists.txt  gnomechanger.cpp  gnomechanger.h
src/backends/hyprland/: CMakeLists.txt  hyprlandchanger.cpp  hyprlandchanger.h
src/backends/kdeplasma/: CMakeLists.txt  kdechanger.cpp  kdechanger.h  kdemonitorlisting.h
src/backends/sway/: CMakeLists.txt  swaychanger.cpp  swaychanger.h
src/backends/x11/: CMakeLists.txt  changerX.cpp  changerX.h
src/backends/xfce/: CMakeLists.txt  xfcechanger.cpp  xfcechanger.h
src/cayppercore/: CMakeLists.txt  IChanger.h  changer.cpp  changer.h  changerFactory.cpp  changerFactory.h  composfinder.cpp  composfinder.h  coreservice.cpp  coreservice.h  directorylister.cpp  directorylister.h  envvardetector.cpp  envvardetector.h  monitorhandler.cpp  monitorhandler.h  monitorlister.cpp  monitorlister.h  persistenceaddon.cpp  persistenceaddon.h
src/cayppercore/backends/: changerFactory.cpp  changerFactory.h
src/cayppercore/backends/gnome/: CMakeLists.txt  gnomechanger.cpp  gnomechanger.h
src/cayppercore/backends/hyprland/: CMakeLists.txt  hyprlandchanger.cpp  hyprlandchanger.h
src/cayppercore/backends/kdeplasma/: CMakeLists.txt  kdechanger.cpp  kdechanger.h  kdemonitorlisting.cpp
src/cayppercore/backends/sway/: CMakeLists.txt  swaychanger.cpp  swaychanger.h
src/cayppercore/backends/x11/: CMakeLists.txt  changerX.cpp  changerX.h
src/cayppercore/backends/xfce/: CMakeLists.txt  xfcechanger.cpp  xfcechanger.h
src/cayppercore/domainExpansion/: filllmode.cpp  fillmode.h  fillmodeconverter.h  getConfigPath.h  jsscriptloader.h  monState.h  raiiguard.h  replaceLine.h
src/cayppercore/kdeplasma/: CMakeLists.txt  kdechanger.cpp  kdechanger.h  kdemonitorlisting.cpp  kdemonitorlisting.h  script.js
src/cayppercore/xfce/: xfcechanger.cpp  xfcechanger.h
src/caypperctl/: CMakeLists.txt  controller.cpp  controller.h  main.cpp
src/caypperqt/: CMakeLists.txt  resources.qrc
src/caypperqt/cpp/: appsettings.cpp  appsettings.h  changer.cpp  changer.h  composfinder.cpp  controller.cpp  controller.h  imagemodel.cpp  inputtakerfromqml.cpp  inputtakerfromqml.h  main.cpp
src/caypperqt/qml/: AppSettings.qml  Grid.qml  Main.qml  PersistencePopup.qml  SettingsStack.qml
src/caypperqt/qml/settings/: SettingsStore.qml
src/cpp/: directorylister.h  imagemodel.h  inputtakerfromqml.cpp  inputtakerfromqml.h
src/qml/: AppSettings.qml  Grid.qml
